--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,50 @@
-.App {
-  text-align: center;
+*{
+  font-size: 25px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+body{
+  background-color: slateblue;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  text-align: center;
+
 }
 
-.App-link {
-  color: #61dafb;
+.container{
+  padding: 10px;
+  top: 30%;
+  left: 35%;
+  position: absolute;
+  text-align: center;
+  background-color: rgb(16, 15, 15);
+  border-radius: 5px;
+}
+.container input{
+  background-color:black;
+  font-size: 45px;
+  color: aliceblue;
+  padding: 5px;
+  border: 2px solid black;
+  text-align: right;
+  
+}
+button{
+  margin: 2px;
+  border-radius: 7px;
+}
+.keypad{
+display: grid;
+grid-template-columns: repeat(4 , 1fr);
+grid-auto-rows: minmax(60px , auto);
+margin: 5px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+#clear{
+  grid-column: 1/3;
+}
+#equal{
+  grid-column: 3/5;
+}
+
+#clear , #equal , #backspace , #cd{
+  background-color:aqua;
 }
