--- a/src/App.css
+++ b/src/App.css
@@ -1,41 +1,44 @@
-*{
+* {
   font-size: 25px;
 }
 
-body{
+body {
   background-color: slateblue;
+  display: flex;
+  align-items: center;
   justify-content: center;
-  text-align: center;
-
+  height: 100vh;
+  margin: 0;
 }
 
-.container{
+.container {
+  width: 80%;
   padding: 10px;
-  top: 30%;
-  left: 35%;
-  position: absolute;
   text-align: center;
   background-color: rgb(16, 15, 15);
   border-radius: 5px;
 }
-.container input{
-  background-color:black;
+
+.container input {
+  background-color: black;
   font-size: 45px;
   color: aliceblue;
   padding: 5px;
   border: 2px solid black;
   text-align: right;
-  
+  width: 98%;
 }
-button{
+
+button {
   margin: 2px;
   border-radius: 7px;
 }
-.keypad{
-display: grid;
-grid-template-columns: repeat(4 , 1fr);
-grid-auto-rows: minmax(60px , auto);
-margin: 5px;
+
+.keypad {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-auto-rows: minmax(60px, auto);
+  margin: 5px;
 }
 
 #clear{
@@ -45,6 +48,21 @@ margin: 5px;
   grid-column: 3/5;
 }
 
-#clear , #equal , #backspace , #cd{
-  background-color:aqua;
+#clear,
+#equal,
+#backspace,
+#cd {
+  background-color: aqua;
+}
+
+@media only screen and (max-width: 480px) {
+  .container input {
+    width: 90%;
+  }
+
+  .container {
+    width: 100%;
+    align-items: center;
+    justify-content: center;
+  }
 }
